--- a/src/App.css
+++ b/src/App.css
@@ -757,7 +757,7 @@ textarea:-webkit-autofill {
     color: var(--text-primary);
     font-weight: bold;
     display: block;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0; 
 }
 
 .password-rules-notice ul {
@@ -768,4 +768,8 @@ textarea:-webkit-autofill {
 
 .password-rules-notice li {
     margin-bottom: 0.25rem;
+}
+
+select {
+    color: var(--text-primary);
 }
